Fix annotation icon vertical not centered issue

--- a/src/templates/assets/stylesheets/main/components/_tooltip.scss
+++ b/src/templates/assets/stylesheets/main/components/_tooltip.scss
@@ -204,7 +204,7 @@
       // Annotation marker background
       &::before {
         position: absolute;
-        top: -0.1ch;
+        top: 0;
         z-index: -1;
         width: 2.2ch;
         height: 2.2ch;
@@ -222,7 +222,7 @@
       // alignment of text following an annotation.
       &::after {
         position: absolute;
-        top: -0.1ch;
+        top: 0;
         z-index: -1;
         width: 2.2ch;
         height: 2.2ch;
